Fix menu color on mobile

--- a/app/assets/stylesheets/includes/_menu.scss
+++ b/app/assets/stylesheets/includes/_menu.scss
@@ -125,7 +125,7 @@
       display: block;
     }
     .menu > li a {
-      color: var(--yellow-50);
+      color: var(--yellow-50)!important;
       display: block;
       text-align: center;
     }
